--- a/css/main.css
+++ b/css/main.css
@@ -41,20 +41,30 @@ body {
   text-shadow: 0 1px 1px rgba(0, 0, 0, 0.6);
   background-image: linear-gradient(rgba(255, 255, 255, 0.28) 0%, rgba(255, 255, 255, 0.28) 50%, rgba(255, 255, 255, 0) 51%, rgba(255, 255, 255, 0) 100%), url("../images/dark-grunge-texture-.35.png"), linear-gradient(#14e7f5, #02679d);
   box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.4), 0 1px 3px 1px rgba(0, 0, 0, 0.4);
-  border-radius: 3px; }
-
-.btn-default:hover, .btn-default:focus {
-  color: white;
-  background-image: linear-gradient(rgba(255, 255, 255, 0.28) 0%, rgba(255, 255, 255, 0.28) 50%, rgba(255, 255, 255, 0) 51%, rgba(255, 255, 255, 0) 100%), url("../images/dark-grunge-texture-.35.png"), linear-gradient(#33f2ff, #0082c8);
-  background-position: 0; }
+  border-radius: 3px;
+  width: 8em; }
+  .btn-default:hover, .btn-default:focus {
+    color: white;
+    background-image: linear-gradient(rgba(255, 255, 255, 0.28) 0%, rgba(255, 255, 255, 0.28) 50%, rgba(255, 255, 255, 0) 51%, rgba(255, 255, 255, 0) 100%), url("../images/dark-grunge-texture-.35.png"), linear-gradient(#33f2ff, #0082c8);
+    background-position: 0; }
 
 @media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
   body {
     padding-top: 50px; }
 
+  .navbar {
+    height: 50px; }
+
+  #theTitle {
+    line-height: 20px; }
+
+  #phaseTitle {
+    font-size: 80%; }
+
   .cards {
     width: 30%;
     height: auto; }
 
-  .navbar {
-    height: 50px; } }
+  #cardsContainer {
+    margin-top: 2em;
+    text-align: center; } }
