--- a/css/main.css
+++ b/css/main.css
@@ -86,3 +86,16 @@ body {
   #cardsContainer {
     margin-top: 2em;
     text-align: center; } }
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) {
+  #theTitle {
+    line-height: 40px;
+    margin-left: 10%; }
+
+  #intro {
+    margin-left: 1.1em; }
+
+  .row > .theButtons {
+    margin-top: 2em; } }
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) {
+  .row > .theButtons {
+    margin-top: 20em; } }
