--- a/css/main.scss
+++ b/css/main.scss
@@ -96,44 +96,11 @@ body {
 
 }
 
+// Imports the responsive styles
+
+@import 'responsive';
 
 
-// Responsive resizing
 
-
-@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
-
-	body {
-		padding-top: 50px;
-	}
-	
-	.navbar {
-	    height: 50px;
-	}
-
-	#theTitle { 
-    	line-height: 20px;
-    	margin-left: 10%;//0.8em;
-	}
-
-	#intro {
-		margin-left: 1.1em;
-	}
-
-	#phaseTitle {
-		font-size: 80%;
-	}
-
-	.cards {
-		width: 30%;
-		height: auto;
-	}
-
-	#cardsContainer {
-		margin-top: 2em;
-		text-align: center;
-	}
-
-}
 
 
