--- a/css/main.scss
+++ b/css/main.scss
@@ -40,6 +40,8 @@ body {
 
 #intro {
 	margin-left: 3.5em;
+	margin-top: 1em;
+	margin-bottom: -3em; // to compensate for the margin-top of the #phaseTitle div
 
 	& > p {
 	font-size: 130%;
@@ -58,7 +60,7 @@ body {
 	& > h2 {
 	font-size: 220%;
 	}
-}
+}	
 
 #cardsContainer {
 	margin-top: 4em;
